--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
         "deploy": "gh-pages -d dist"
     },
     "dependencies": {
+        "framer-motion": "^12.23.26",
         "react": "^19.2.0",
-        "react-dom": "^19.2.0"
+        "react-dom": "^19.2.0",
+        "styled-components": "^6.1.19"
     },
     "devDependencies": {
         "@eslint/js": "^9.39.1",
